--- a/index.css
+++ b/index.css
@@ -3,3 +3,20 @@
     margin-right: 50%;
     margin-left: 50% ;
 }
+
+#centered-text{
+    text-align: center;
+    }
+
+/**.flex-row{
+    display:flex;
+    justify-content: space-between;
+    width: 300px;
+    border: 1px solid gray;
+
+}
+
+.user-display{
+    display: flex;
+}
+*/
