Added Buttons and Finished Rankings

--- a/index.css
+++ b/index.css
@@ -8,11 +8,11 @@
     text-align: center;
     }
 
-/**.flex-row{
+.flex-row{
     display:flex;
     justify-content: space-between;
-    width: 300px;
-    border: 1px solid gray;
+    width: 400px;
+
 
 }
 
