--- a/index.css
+++ b/index.css
@@ -12,7 +12,8 @@
     display:flex;
     justify-content: space-between;
     width: 400px;
-
+    margin-left: auto;
+    margin-right: auto;
 
 }
 
