--- a/index.css
+++ b/index.css
@@ -12,11 +12,14 @@
     display:flex;
     justify-content: space-between;
     width: 400px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left:auto;    
+    margin-right:auto;
+
 
 }
 
 .user-display{
     display: flex;
+    align-self: baseline;
+    justify-content: space-between;
 }
